--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "asf-search>=10.0.4",
     "hyp3-sdk>=7.7.3",
+    "pandas>=2.3.2",
+    "tqdm>=4.66.0",
 ]
 
 [dependency-groups]
