--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "asf-search>=10.0.4",
+    "gdal>=3.11.4",
     "hyp3-sdk>=7.7.3",
+    "mintpy>=1.6.2",
     "pandas>=2.3.2",
     "tqdm>=4.66.0",
 ]
