--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "hyp3-sdk>=7.7.3",
     "mintpy>=1.6.2",
     "pandas>=2.3.2",
+    "shapely>=2.0.0",
     "tqdm>=4.66.0",
 ]
 
